--- a/vercel.json
+++ b/vercel.json
@@ -1,12 +1,9 @@
 {
-    "builds":[
-        {
-            "src":"Personal/app.py",
-            "use":"@vercel/python"
-        }
-
+    "version": 2,
+    "builds": [
+        {"src": "app.py", "use": "@vercel/python"}
     ],
     "routes": [
-        {"src": "/Personal/*", "dest": "/Personal/app.py"}
+        {"src": "/(.*)", "dest": "app.py"}
     ]
 }
